<?xml version="1.0"?>
<package format="3">
  <name>yolo_sam</name>
  <version>0.0.1</version>
  <description>ROS2 package for YOLO-World + mobile-SAM inference and detections publishing.</description>

  <maintainer email="todo@example.com">urorin</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>seoulntower</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
